--- a/po/cs.po
+++ b/po/cs.po
@@ -681,9 +681,8 @@ msgid "<Current movielist location>"
 msgstr "<současný seznam souborů>"
 
 #
-#, fuzzy
 msgid "<Default Skin>"
-msgstr "Standardní nastavení"
+msgstr "<Defaultní Skin>"
 
 #
 msgid "<Default movie location>"
@@ -2120,22 +2119,19 @@ msgid "Configuration..."
 msgstr "Nastavení..."
 
 msgid "Configure DVB-ATSC"
-msgstr ""
+msgstr "Konfigurovat DVB-ATSC"
 
 #
-#, fuzzy
 msgid "Configure DVB-C"
-msgstr "Nastavuji"
+msgstr "Konfigurovat DVB-C"
 
 #
-#, fuzzy
 msgid "Configure DVB-S"
-msgstr "Nastavuji"
+msgstr "Konfigurovat DVB-S"
 
 #
-#, fuzzy
 msgid "Configure DVB-T"
-msgstr "Nastavuji"
+msgstr "Konfigurovat DVB-T"
 
 msgid "Configure an additional delay to improve external subtitle synchronisation."
 msgstr "Nastavení zpoždění pro lepší synchronizaci externích titulků."
@@ -4636,14 +4632,12 @@ msgid "Hotkey zap"
 msgstr ""
 
 #
-#, fuzzy
 msgid "Hotswitchable"
-msgstr "netestovatelné"
+msgstr "Přepínatelný"
 
 #
-#, fuzzy
 msgid "Hotswitchable tuner"
-msgstr "Přepínatelné typy tunerů:"
+msgstr "Přepínatelný tuner"
 
 msgid "How many minutes do you want add to the recording?"
 msgstr "Kolik minut chcete přidat k nahrávání?"
@@ -5001,9 +4995,8 @@ msgid "Invalid location"
 msgstr "Neplatné umístění"
 
 #
-#, fuzzy
 msgid "Invalid reason"
-msgstr "Neplatné umístění"
+msgstr "Neplatný výsledek"
 
 #
 msgid "Invalid transponder data"
@@ -7719,7 +7712,7 @@ msgid "S-Video"
 msgstr "S-Video"
 
 msgid "SCPC optimized search range"
-msgstr ""
+msgstr "SCPC optimalizovaný rozsah vyhledávání"
 
 msgid "SCR (Unicable/JESS)"
 msgstr ""
@@ -8048,16 +8041,16 @@ msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) devi
 msgstr "Jestliže tuner bude připojen k SRC zařízení (Unicable/JESS), nastavte 'FCB SRC'. Pro všechna ostatní nastavení zvolte 'FBC automatic'."
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
-msgstr ""
+msgstr "Chcete-li konfigurovat tento tuner pro DVB-ATSC, zvolte 'Ano'"
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
-msgstr ""
+msgstr "Chcete-li konfigurovat tento tuner pro DVB-C, zvolte 'Ano'"
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-S"
-msgstr ""
+msgstr "Chcete-li konfigurovat tento tuner pro DVB-S, zvolte 'Ano'"
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-T"
-msgstr ""
+msgstr "Chcete-li konfigurovat tento tuner pro DVB-T, zvolte 'Ano'"
 
 msgid "Select 'band' if using a 'universal' LNB, otherwise consult your LNB spec sheet."
 msgstr "Zvolte 'Pásmo', pokud používáte 'Univerzální LNB', jinak se podívejte do specifikace LNB."
@@ -9631,9 +9624,8 @@ msgid "Switch to radio mode"
 msgstr "Přepnout do Radio módu"
 
 #
-#, fuzzy
 msgid "Switchable tuner types"
-msgstr "Přepínatelné typy tunerů:"
+msgstr "Přepínatelný typ tuneru"
 
 msgid "Switzerland"
 msgstr "Švýcarsko"
@@ -9670,7 +9662,7 @@ msgstr ""
 "Pro případné korekce můžete kontaktovat autora\n"
 "na výše uvedené adrese.\n"
 "\n"
-"®25.1.2019"
+"®23.2.2019"
 
 #
 msgid "TS file is too large for ISO9660 level 1!"
@@ -9970,7 +9962,7 @@ msgstr ""
 "Nepanikařte, jestliže uvidíte nějaké podezřelé údaje!"
 
 msgid "This is a multitype tuner. Available options depend on the hardware."
-msgstr ""
+msgstr "Jde o multitype tuner. Dostupné možnosti závisí na hardwaru."
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "Jde o pořadí ve kterém jsou příkazy DiSEqC odeslány do anténního systému. Pořadí musí přesně odpovídat pořadí fyzických zařízení na signálovém kabelu (začínající od konce přijímače)."
@@ -10502,9 +10494,8 @@ msgstr "Zapne LED napájení při hlubokém spánku."
 msgid "Turn on the power LED during standby."
 msgstr "Zapne LED napájení při standby."
 
-#, fuzzy
 msgid "Turn on the power LED."
-msgstr "Zapne LED napájení při standby."
+msgstr "Zapne LED napájení."
 
 msgid "Turning step size"
 msgstr "Velikost kroku  ladění"
