Update latvian translation

--- a/po/lv.po
+++ b/po/lv.po
@@ -1870,19 +1870,16 @@ msgid "Configuration..."
 msgstr "Konfigurācija..."
 
 msgid "Configure DVB-ATSC"
-msgstr ""
+msgstr "Iestatīt DVB-ATSC"
 
-#, fuzzy
 msgid "Configure DVB-C"
-msgstr "Konfigurē"
+msgstr "Iestatīt DVB-C"
 
-#, fuzzy
 msgid "Configure DVB-S"
-msgstr "Konfigurē"
+msgstr "Iestatīt DVB-S"
 
-#, fuzzy
 msgid "Configure DVB-T"
-msgstr "Konfigurē"
+msgstr "Iestatīt DVB-T"
 
 msgid "Configure an additional delay to improve external subtitle synchronisation."
 msgstr "Uzstāda papildus aizturi lai darbotos ārējo subtitru sinhronizācija."
@@ -4082,13 +4079,11 @@ msgstr "Ātro taustiņu iestatījumi"
 msgid "Hotkey zap"
 msgstr "Pārslēgšana uz"
 
-#, fuzzy
 msgid "Hotswitchable"
-msgstr "netestēts"
+msgstr "Pārslēdzams"
 
-#, fuzzy
 msgid "Hotswitchable tuner"
-msgstr "Pārslēdzamo uztvērēju tipi:"
+msgstr "Pārslēdzams uztvērējs"
 
 msgid "How many minutes do you want add to the recording?"
 msgstr "Cik minūšu vēlaties pievienot ierakstam?"
@@ -4393,9 +4388,8 @@ msgstr "Izvēlēta nepareiza mape: %s"
 msgid "Invalid location"
 msgstr "Nederīga vieta"
 
-#, fuzzy
 msgid "Invalid reason"
-msgstr "Nederīga vieta"
+msgstr "Nezināms iemesls!"
 
 msgid "Invalid transponder data"
 msgstr "Nederīgi transpondera dati"
@@ -6987,16 +6981,16 @@ msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) devi
 msgstr "Izvēlieties 'FBC SCR', ja šis uztvērējs izmantos SCR (Unicable/JESS) ierīci. Visiem citiem iestatījumiem izvēlieties 'FBC automātiski'."
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
-msgstr ""
+msgstr "Ja vēlaties izmantot šo uztvērēju DVB-ATSC uztveršanai izvēlieties 'Jā'"
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
-msgstr ""
+msgstr "Ja vēlaties izmantot šo uztvērēju DVB-C uztveršanai izvēlieties 'Jā'"
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-S"
-msgstr ""
+msgstr "Ja vēlaties izmantot šo uztvērēju DVB-S uztveršanai izvēlieties 'Jā'"
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-T"
-msgstr ""
+msgstr "Ja vēlaties izmantot šo uztvērēju DVB-T uztveršanai izvēlieties 'Jā'"
 
 msgid "Select 'band' if using a 'universal' LNB, otherwise consult your LNB spec sheet."
 msgstr "Ja izmantojat 'universālo' LNB, izvēlieties 'josla', pretējā gadījumā skatiet LNB specifikāciju."
@@ -8363,9 +8357,8 @@ msgstr "Pārslēgt uz iepriekšējo papildkanālu"
 msgid "Switch to radio mode"
 msgstr "Pārslēgt uz radio režīmu"
 
-#, fuzzy
 msgid "Switchable tuner types"
-msgstr "Pārslēdzamo uztvērēju tipi:"
+msgstr "Izmantojamie uztvērēji"
 
 msgid "Switzerland"
 msgstr "Šveice"
@@ -8671,7 +8664,7 @@ msgstr ""
 "Lūdzu neuztraucieties ja jums liekas, ka šeit attēlotas aizdomīgas vērtības!"
 
 msgid "This is a multitype tuner. Available options depend on the hardware."
-msgstr ""
+msgstr "Šis ir vairāku veidu uztvērējs. Pieejamās opcijas ir atkarīgas no aparatūras."
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "Komadu rinda, kādā DiSEqC komandas tiek nosūtītas. Komandu rindai precīzi jāatbilst kārtībai, kādā sākot no uztvērēja fiziskās ierīces tiek pielēgtas kabelim."
