Update hungarian translation

--- a/po/hu.po
+++ b/po/hu.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-02-22 14:27+0330\n"
-"PO-Revision-Date: 2019-02-19 12:41+0100\n"
+"PO-Revision-Date: 2019-02-27 13:02+0100\n"
 "Last-Translator: mcfly82\n"
 "Language-Team: mcfly82 & wysless\n"
 "Language: hu_HU\n"
@@ -1856,19 +1856,16 @@ msgid "Configuration..."
 msgstr "Beállítások..."
 
 msgid "Configure DVB-ATSC"
-msgstr ""
+msgstr "DVB-ATSC konfigurálása"
 
-#, fuzzy
 msgid "Configure DVB-C"
-msgstr "Konfigurálás"
+msgstr "DVB-C konfigurálása"
 
-#, fuzzy
 msgid "Configure DVB-S"
-msgstr "Konfigurálás"
+msgstr "DVB-S konfigurálása"
 
-#, fuzzy
 msgid "Configure DVB-T"
-msgstr "Konfigurálás"
+msgstr "DVB-T konfigurálása"
 
 msgid "Configure an additional delay to improve external subtitle synchronisation."
 msgstr "Extra késleltetés beállítása külső feliratfájl esetén, szinkronizáció hibák korrigálásához."
@@ -4061,13 +4058,11 @@ msgstr "Hotkey beállítás"
 msgid "Hotkey zap"
 msgstr "Hotkey csatornaváltás"
 
-#, fuzzy
 msgid "Hotswitchable"
-msgstr "nem tesztelhető"
+msgstr "Működés közben cserélhető"
 
-#, fuzzy
 msgid "Hotswitchable tuner"
-msgstr "Cserélhető tuner típusok:"
+msgstr "Működés közben cserélhető tuner"
 
 msgid "How many minutes do you want add to the recording?"
 msgstr "Hány percet szeretne felvenni?"
@@ -4375,9 +4370,8 @@ msgstr "A kiválasztott mappa érvénytelen: %s"
 msgid "Invalid location"
 msgstr "Érvénytelen hely"
 
-#, fuzzy
 msgid "Invalid reason"
-msgstr "Érvénytelen hely"
+msgstr "Érvénytelen ok"
 
 msgid "Invalid transponder data"
 msgstr "Érvénytelen transzponder adat"
@@ -6967,16 +6961,16 @@ msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) devi
 msgstr "Válassza az 'Unicable'-t, ha az ön tunere Unicable eszközhöz csatlakozik. Minden egyéb összeállítás esetén válassza az 'FCB automata'-t."
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
-msgstr ""
+msgstr "Válassza az 'Igen'-t, amennyiben ezt a tunert DVB-ATSC vételhez szeretné használni."
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
-msgstr ""
+msgstr "Válassza az 'Igen'-t, amennyiben ezt a tunert DVB-C vételhez szeretné használni."
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-S"
-msgstr ""
+msgstr "Válassza az 'Igen'-t, amennyiben ezt a tunert DVB-S vételhez szeretné használni."
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-T"
-msgstr ""
+msgstr "Válassza az 'Igen'-t, amennyiben ezt a tunert DVB-T vételhez szeretné használni."
 
 msgid "Select 'band' if using a 'universal' LNB, otherwise consult your LNB spec sheet."
 msgstr "Válassza a 'sáv'-ot, amennyiben univerzális fejet használ, egyéb esetekben nézze meg a fej technikai adatlapját."
@@ -8345,9 +8339,8 @@ msgstr "Ugrás az előző alcsatornára"
 msgid "Switch to radio mode"
 msgstr "Váltás rádió módba"
 
-#, fuzzy
 msgid "Switchable tuner types"
-msgstr "Cserélhető tuner típusok:"
+msgstr "Cserélhető tuner típusok"
 
 msgid "Switzerland"
 msgstr "Svájc"
@@ -8381,7 +8374,7 @@ msgid "TRANSLATOR_INFO"
 msgstr ""
 "A fordítást készítette:\n"
 "mcfly82 & wysless\n"
-"Utolsó fordítás időpontja: 2019.02.19.\n"
+"Utolsó fordítás időpontja: 2019.02.27.\n"
 "Eredeti fordítás: MediaVox-Team, Robertut\n"
 "A magyar fordítás az OpenPLi projekthez készült.\n"
 "További információ: http://openpli.org"
@@ -8661,7 +8654,7 @@ msgstr ""
 "Ne aggódjon, ha valamilyen érték ön szerint nem megfelelő!"
 
 msgid "This is a multitype tuner. Available options depend on the hardware."
-msgstr ""
+msgstr "Ez egy multi-típusú tuner. Az elérhető opciók a hardvertől függenek."
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "Ez a földfelszíni rendszerre küldött DiSEqC parancsok sorrendje. A sorrendnek teljesen meg kell egyeznie a jelkábelen található fizikai eszközök sorrendjével (a vevőkészüléktől indulva)."
